opam-version: "2.0"
name: "lo"
version: "0.1.2"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-lo"
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix] {os != "macos"}
  [
    "./configure"
    "CFLAGS=-I/usr/local/include"
    "LDFLAGS=-L/usr/local/lib"
    "OCAMLFLAGS=-ccopt -I/usr/local/include -cclib -L/usr/local/lib"
    "--prefix"
    prefix
  ] {os = "macos"}
  [make "clean"] {dev}
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml" 
  "ocamlfind" {build}
]
depexts: [
  ["liblo-dev"] {os-family = "debian"}
  ["liblo"] {os = "macos" & os-distribution = "homebrew"}
  ["liblo"] {os-distribution = "arch"}
  ["liblo-devel"] {os-distribution = "centos"}
  ["liblo-devel"] {os-distribution = "fedora"}
  ["liblo-devel"] {os-family = "suse"}
  ["automake" "autoconf"] {os-distribution = "alpine"}
]
bug-reports: "https://github.com/savonet/ocaml-lo/issues"
dev-repo: "git+https://github.com/savonet/ocaml-lo.git"
synopsis:
  "Bindings for the lo library which provides functions for communicating with input controls using the OSC protocol"
